# rapid

./: .gitmodules  CMakeLists.txt  README.md  package-info.json.in
.github/workflows/: main.yml
help/: myClassificationModel.json  myRegressionModel.json  rapid.classification.maxhelp  rapid.regression.maxhelp
patchers/abstractions/: ui.i.maxpat  ui.o.classify.maxpat  ui.o.regress.maxpat
patchers/data/dict/: my_classification.json  my_regression.json  my_synth.json
patchers/data/presets/: my_classification_input_preset.json  my_classification_output_preset.json  my_regression_input_preset.json  my_regression_output_preset.json  my_synth_input_preset.json  my_synth_output_preset.json
patchers/data/rapidmax/: classification.json  my_classification_model.json  my_synth_model.json  regression.json
source/projects/rapid.classification/: CMakeLists.txt  rapid.classification.cpp
source/projects/rapid.regression/: CMakeLists.txt  rapid.regression.cpp  rapid.regression_test.cpp
